welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: not found: value color
	if(x=color.green){
             ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x=color.green){
            ^